--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,5 +28,17 @@ jobs:
       - name: Run tests
         run: pytest
 
+           - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Build Docker image
-        run: docker build -t cicd-automation-webapp .
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/cicd-automation-webapp:latest .
+
+      - name: Push Docker image to Docker Hub
+        run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/cicd-automation-webapp:latest
+
