--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/cicd-automation-webapp:latest ./app
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/cicd-automation-webapp:latest .
 
       - name: Push Docker image to Docker Hub
         run: |
