--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,9 +36,9 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/cicd-automation-webapp:latest .
+          docker build . -t varun0170/cicd-automation-webapp:latest
 
       - name: Push Docker image to Docker Hub
         run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/cicd-automation-webapp:latest
+          docker push varun0170/cicd-automation-webapp:latest
 
